--- a/extension.toml
+++ b/extension.toml
@@ -1,6 +1,6 @@
-id = "xuancong-vynora"
+id = "vynora"
 name = "Vynora"
-version = "0.0.1"
+version = "0.0.2"
 schema_version = 1
 authors = ["Xuancong Meng <xuancongmeng@gmail.com>"]
 description = "a theme for Zed based on the Monokai Pro color scheme"
