doc: update version

--- a/extension.toml
+++ b/extension.toml
@@ -1,7 +1,7 @@
 id = "vynora"
 name = "Vynora"
-version = "0.0.2"
+version = "0.0.3"
 schema_version = 1
 authors = ["Xuancong Meng <xuancongmeng@gmail.com>"]
-description = "a theme for Zed based on the Monokai Pro color scheme"
+description = "a theme for Zed based on the Monokai color scheme"
 repository = "https://github.com/QuarkPixel/Vynora"
